welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:10: error: reassignment to val
      if (die1=1 || die1==2 | die1==3 || die1==4 || die1==5){
              ^withoutDoubles:11: error: reassignment to val
        die1=die1 + 1
            ^withoutDoubles:15: error: reassignment to val
        die1=1
            ^withoutDoubles:14: error: type mismatch;
 found   : Unit
 required: Int
      if (die1 == 6){
      ^